<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="30dp"
                    android:src="@drawable/userprof"
                    android:layout_height="30dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/benifnameid"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@id/image1"
                    android:layout_toLeftOf="@id/sceme"
                    android:text="Hello"
                    android:layout_gravity="center"
                    android:textColor="@color/primary"
                    android:textSize="22sp"
                    />

                <TextView
                    android:id="@+id/sceme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:text="Phase-1"/>

            </RelativeLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Registration_number"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/numberid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:textColor="#2c3e50"
                    android:textSize="22dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/father_name"
                            android:textSize="16dp"
                            />
                        <TextView
                            android:id="@+id/fatherid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:layout_marginLeft="2dp"
                            android:textColor="#2c3e50"
                            android:text="Father"

                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:text="@string/Contact"

                            />
                        <TextView
                            android:id="@+id/contactid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="14dp"
                            android:layout_marginLeft="2dp"
                            android:textColor="#2c3e50"
                            android:text="Contact" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="14dp"
                            android:text="@string/Village"
                            />

                        <TextView
                            android:id="@+id/villageid"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Village"
                            android:maxLines="1"
                            android:layout_marginLeft="2dp"
                            android:textColor="#2c3e50"
                            android:textSize="14dp"
                            android:textStyle="bold" />


                    </LinearLayout>

                </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16dp"
                                android:text="@string/Pump_type"

                                />
                            <TextView
                                android:id="@+id/pumpid"
                                android:layout_width="wrap_content"
                                android:maxLength="16"
                                android:layout_height="wrap_content"
                                android:textColor="#2c3e50"
                                android:textStyle="bold"
                                android:text="father"
                                android:layout_marginLeft="2dp"
                                android:textSize="14dp"
                                />


                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/District"
                                android:textSize="16dp"


                                />
                            <TextView
                                android:id="@+id/districtid"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#2c3e50"
                                android:text="District"
                                android:textStyle="bold"
                                android:textSize="14dp"

                                />


                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Block"
                                android:textSize="14dp"


                                />
                            <TextView
                                android:id="@+id/blockid"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#2c3e50"
                                android:text="Block"
                                android:textStyle="bold"
                                android:textSize="14dp" />

                        </LinearLayout>

                    </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/Old_rmu"
                    />
                <TextView
                    android:id="@+id/old_rmu_ide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="#2c3e50"
                    android:text="" />

            </LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp">
            <ImageView
                android:id="@+id/upload"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:background="@drawable/upload_vdo"
                />

    <ImageView
        android:id="@+id/download"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        android:background="@drawable/download"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>