<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Benificiary Details - "
            android:textAlignment="center"
            android:textColor="#9f3342"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registration_number"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/numberid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textColor="#2c3e50"
            android:textSize="22dp" />

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_corner"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="@string/father_name"
                        android:textColor="@color/primary"
                        android:textSize="16dp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/fatheride"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="father"
                        android:textColor="#2c3e50"
                        android:textSize="16sp"

                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:gravity="left"
                        android:text="@string/Contact"
                        android:textColor="@color/primary"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/contactide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Contact"
                        android:maxLines="1"
                        android:textColor="#2c3e50"
                        android:textSize="16sp"

                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="@string/Village"
                        android:textColor="@color/primary"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/villageide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Village"
                        android:maxLines="1"
                        android:textSize="16sp"
                        android:textColor="#2c3e50" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/Benificiary"
                            android:textColor="@color/primary"
                            android:layout_marginRight="5dp"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/benificiaryide"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="father"
                            android:textColor="#2c3e50"
                            android:textSize="16sp"
                            />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/Block"
                            android:textColor="@color/primary"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/blockide"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Block"
                            android:maxLines="1"
                            android:textColor="#2c3e50"
                            android:textSize="16sp"

                            />


                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


<LinearLayout
    android:id="@+id/year"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:background="#EDEDED"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Year : "
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

</LinearLayout>
    <EditText
        android:id="@+id/number"
        android:layout_below="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Serial Id"
        android:maxLength="5"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:textColor="@color/white"
        android:background="@color/primary"
        android:layout_margin="20dp"
        />

</LinearLayout>